// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSelect Disabled FormSelect input  1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-disabled"
  >
    <select
      aria-invalid="false"
      aria-label="disabled FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-default-:r5:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
      disabled=""
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect FormSelect input with aria-label does not generate console error 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      aria-label="label"
      data-ouia-component-id="OUIA-Generated-FormSelect-default-:r7:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect FormSelect input with id does not generate console error 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      aria-label="label"
      data-ouia-component-id="OUIA-Generated-FormSelect-default-:r9:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
      id="id"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect FormSelect input with no aria-label or id generates console error 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-FormSelect-default-:rb:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect Grouped FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      aria-label="grouped FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-default-:r3:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <optgroup
        class=""
        label="Group1"
      >
        <option
          class=""
          value="1"
        >
          The First Option
        </option>
        <option
          class=""
          value="2"
        >
          Second option is selected by default
        </option>
      </optgroup>
      <optgroup
        class=""
        label="Group2"
      >
        <option
          class=""
          value="3"
        >
          The Third Option
        </option>
        <option
          class=""
          value="4"
        >
          The Fourth option
        </option>
      </optgroup>
      <optgroup
        class=""
        disabled=""
        label="Group3"
      >
        <option
          class=""
          value="5"
        >
          The Fifth Option
        </option>
        <option
          class=""
          value="6"
        >
          The Sixth option
        </option>
      </optgroup>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect Simple FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <select
      aria-invalid="false"
      aria-label="simple FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-default-:r1:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        disabled=""
        value="please choose"
      >
        Please Choose
      </option>
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
      <option
        class=""
        value="miss"
      >
        Miss
      </option>
      <option
        class=""
        value="mrs"
      >
        Mrs
      </option>
      <option
        class=""
        value="ms"
      >
        Ms
      </option>
      <option
        class=""
        value="dr"
      >
        Dr
      </option>
      <option
        class=""
        disabled=""
        value="other"
      >
        Other
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect invalid FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-error"
  >
    <select
      aria-invalid="true"
      aria-label="invalid FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-error-:rd:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect validated success FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-success"
  >
    <select
      aria-invalid="false"
      aria-label="validated FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-success-:rf:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`FormSelect validated warning FormSelect input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-warning"
  >
    <select
      aria-invalid="false"
      aria-label="validated FormSelect"
      data-ouia-component-id="OUIA-Generated-FormSelect-warning-:rh:"
      data-ouia-component-type="PF6/FormSelect"
      data-ouia-safe="true"
    >
      <option
        class=""
        value="mr"
      >
        Mr
      </option>
    </select>
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
      <span
        class="pf-v6-c-form-control__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;
